mainview + navigation rework
